// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`ChecklistResult ast 1`] = `
{
  "data": {
    "node": {
      "__typename": "ChecklistResult",
      "active": {
        "__typename": "Active",
        "active": true,
      },
      "assignees": {
        "__typename": "AssigneeConnection",
        "totalCount": 0,
      },
      "attachments": {
        "__typename": "AttachmentConnection",
        "totalCount": 0,
      },
      "name": {
        "__typename": "DisplayName",
        "name": {
          "__typename": "DynamicString",
          "value": "String without default",
        },
      },
      "order": 0,
      "parent": {
        "__typename": "Checklist",
        "name": {
          "__typename": "DisplayName",
          "name": {
            "__typename": "DynamicString",
            "value": "GENERATED DO NOT EDIT",
          },
        },
      },
      "required": false,
      "status": null,
      "widget": {
        "__typename": "StringWidget",
        "string": null,
      },
    },
  },
}
`;

exports[`ChecklistResult ecs 1`] = `
{
  "data": {
    "node": {
      "__typename": "ChecklistResult",
      "active": {
        "__typename": "Active",
        "active": true,
      },
      "assignees": {
        "__typename": "AssigneeConnection",
        "totalCount": 0,
      },
      "attachments": {
        "__typename": "AttachmentConnection",
        "totalCount": 0,
      },
      "name": {
        "__typename": "DisplayName",
        "name": {
          "__typename": "DynamicString",
          "value": "String without default",
        },
      },
      "order": 0,
      "parent": {
        "__typename": "Checklist",
        "name": {
          "__typename": "DisplayName",
          "name": {
            "__typename": "DynamicString",
            "value": "GENERATED DO NOT EDIT",
          },
        },
      },
      "required": false,
      "status": {
        "__typename": "ChecklistOpen",
      },
      "widget": {
        "__typename": "StringWidget",
        "string": null,
      },
    },
  },
}
`;
